# nndecomp

./: README.md  borland.conf  build_all.sh  build_prj.sh  build_toolchain.py  comp_bc.sh  compile_errorlvl.bat  convert_makefile.py  errorlvl.c  msc.conf  turbo.conf  user_stories.md
bcex/crc16eas/Source/: CRC16.ASM  CRC16.CFG  CRC16.DSK  CRC16.I  CRC16.LST  CRC16.MAK  CRC16.PRJ
dos_utility_caller/: EXITCODE.TXT  README.md  STDERR.TXT  __init__.py  __main__.py  batch_generator.py  cli.py  config_manager.py  dos_caller.py  dosbox_executor.py  example.doscfg  example.py  filename_validator.py  output_handler.py  pyproject.toml  requirements.txt  setup.py  test_dos_caller.py  tmp0ymr.bat  tmp6hr0f0mt.bat  tmp8litgvow.bat
dos_utility_caller/dos_utility_caller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
