[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dos_utility_caller"
version = "1.0.0"
description = "A Python library for transparently calling DOS utilities through DOSBox"
readme = "README.md"
authors = [{name = "DOS Utility Caller Team", email = "example@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Emulators",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[project.urls]
Homepage = "https://github.com/example/dos_utility_caller"
Repository = "https://github.com/example/dos_utility_caller"
Documentation = "https://github.com/example/dos_utility_caller#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["dos_utility_caller*"]

[tool.pytest.ini_options]
testpaths = ["dos_utility_caller"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["dos_utility_caller"]